# zero2prod-rust

./: Cargo.toml  Dockerfile  README.md  cargochef.Dockerfile
.github/workflows/: quality.yml
configuration/: base.yaml
migrations/: 20240507161720_create_subscription_table.sql  20240517124130_make_status_not_null_in_subscriptions.sql  20240609171101_create_user_table.sql
scripts/: init_db.sh  setup-git-hooks.sh
scripts/hooks/: pre-commit  pre-push
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check_tests.rs  helpers.rs  main.rs  newsletter_tests.rs  subscriptions.rs  subscriptions_confirm_tests.rs  subscriptions_tests.rs
