[package]
name = "zero2prod-rust"
description = "Follow along the book zero2prod rust"
version = "0.1.0"
edition = "2021"
authors= ["Abhijeet Vashistha"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod-rust"

[dependencies]
actix-web = "4.5.1"
config = "0.14.0"
once_cell = "1.19.0"
reqwest = "0.12.4"
serde = { version = "1.0.199", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]
