[package]
name = "zero2prod-rust"
description = "Follow along the book zero2prod rust"
version = "0.1.0"
edition = "2021"
authors= ["Abhijeet Vashistha"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod-rust"

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.86"
base64 = "0.22.1"
config = "0.14.0"
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.12.4", features = ["json"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.199", features = ["derive"] }
serde-aux = "4.5.0"
sha3 = "0.10.8"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.10"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
unicode-segmentation = "1.11.0"
uuid = { version = "1.8.0", features = ["v4"] }
validator = "0.18.1"

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
claims = "0.7.1"
fake = "2.9.2"
linkify = "0.10.0"
once_cell = "1.19.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
serde_json = "1.0.117"
wiremock = "0.6.0"
